<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<prerequisites>
		<maven>3.8.6</maven>
	</prerequisites>
	<artifactId>servoy-client</artifactId>
	<version>2023.3.1.3843</version>
	<groupId>com.servoy</groupId>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>2.7.5</tycho.version>
		<rhino.version>1.7.14.s3</rhino.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>developer_repo</id>
			<name>developer_repo</name>
			<url>https://developer.servoy.com/mvn_repository/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>tycho-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/tycho-snapshots/</url>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>doc</id>
			<modules>
				<module>servoy_doc</module>
			</modules>
		</profile>
		<profile>
			<id>design_doc</id>
			<modules>
				<module>servoy_doc</module>
			</modules>
		</profile>
		<profile>
			<id>plugins</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>servoy_base</module>
				<module>servoy_shared</module>
				<module>servoy_smart_client</module>
				<module>servoy_headless_client</module>
				<module>servoy_ngclient</module>
				<module>servoy_ngclient.tests</module>
				<module>servoy_debug</module>
			</modules>
		</profile>
	</profiles>


	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<compilerArgument>-warn:none</compilerArgument>
					<useProjectSettings>false</useProjectSettings>
					<useJDK>BREE</useJDK>
					<deriveReleaseCompilerArgumentFromTargetLevel>false</deriveReleaseCompilerArgumentFromTargetLevel>
					<extraClasspathElements>
						<dependency>
							<groupId>javax.jnlp</groupId>
							<artifactId>jnlp-api</artifactId>
							<version>8.0</version>
						</dependency>
					</extraClasspathElements>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>com.servoy</groupId>
							<artifactId>com.servoy.eclipse.target</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
					<pomDependencies>consider</pomDependencies>
					<resolver>p2</resolver>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>aarch64</arch>
                        </environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
					<dependency-resolution>
						<optionalDependencies>ignore</optionalDependencies>
					</dependency-resolution>
					<filters>
						<filter>
							<type>eclipse-plugin</type>
							<id>sablo</id>
							<restrictTo>
								<version>${project.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.dltk.javascript.rhino</id>
							<restrictTo>
								<version>${rhino.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>servoy_base</id>
							<restrictTo>
								<version>${project.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>servoy_ngclient</id>
							<restrictTo>
								<version>${project.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>servoy_shared</id>
							<restrictTo>
								<version>${project.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>servoy_headless_client</id>
							<restrictTo>
								<version>${project.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>servoy_smart_client</id>
							<restrictTo>
								<version>${project.version}</version>
							</restrictTo>
						</filter>
					</filters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>3.0.0.s1</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>p2-metadata</id>
						<goals>
							<goal>p2-metadata</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<defaultP2Metadata>false</defaultP2Metadata>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
